--- a/grasa_event_locator/templates/resetPWForm.html
+++ b/grasa_event_locator/templates/resetPWForm.html
@@ -12,10 +12,9 @@
 		</div>
 		{% endif %}
       
-	{% csrf_token %}
 		{% if valid_string %}
       <h1 class="h3 mb-3 font-weight-normal text-center top-20">Reset Password</h1>
-	<form id="theForm" method="post" class="needs-validation" novalidate >
+	<form id="theForm" method="post" class="needs-validation" novalidate >{% csrf_token %}
         <div class="row">
                 <div class="col-sm-12">
                     <div class="form-group col-md-12">
